# bing_wallpaper

./: Cargo.toml  readme.md
.github/workflows/: release.yml
src/: main.rs
